objects/UW_Business_Area__c.object
<CustomObject>
    <description>Master table that store the information of UW mentors, Business Specialist code and responsibility area.</description>
    <fields>
        <fullName>Business_Code__c</fullName>
        <externalId>true</externalId>
        <label>Business Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Head_of_UW_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Head of UW Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UW_Business_Areas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RC_Code__c</fullName>
        <externalId>true</externalId>
        <label>RC Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Senior_UW_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Senior UW Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UW_Business_Areas2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>UW Business Area</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RC_Code__c</columns>
        <columns>Business_Code__c</columns>
        <columns>Senior_UW_Name__c</columns>
        <columns>Head_of_UW_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>UWB-{000000}</displayFormat>
        <label>UW Business Area Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UW Business Areas</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>